[package]
name = "aoc"
version = "0.1.0"
authors = ["jari"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.35"
fstrings = "0.2.3"
itertools = "0.9.0"

[[bin]]
name = "day1"
path = "src/day1.rs"

[[bin]]
name = "day2"
path = "src/day2.rs"
